# wagtail_harmony

./: .gitignore  Dockerfile  all_data.json  app_data.json  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: automate_deploy.yaml
blocks/: richtext.py
blocks/templates/blocks/: notice.html
blocks/templates/includes/: body.html
blocks/templatetags/: custom_tags.py
core/conf/: blocks.py  models.py
core/conf/migrations/: 0001_initial.py  0002_navigationsettings_favicon_and_more.py  0002_navigationsettings_footer_logo_page_link_and_more.py  0003_alter_navigationsettings_footer_and_more.py  0004_alter_navigationsettings_footer_and_more.py  0005_alter_navigationsettings_footer_and_more.py  (+8 more)
core/contact/: models.py  wagtail_hooks.py
core/home/: models.py
core/land/: models.py
core/news/: models.py  wagtail_hooks.py
core/ourteam/: models.py
core/richtext/: models.py  utils.py
custom/business/: models.py  wagtail_hooks.py
custom/elections/: models.py  wagtail_hooks.py
custom/emergency/: models.py
custom/events/: models.py  wagtail_hooks.py
custom/history/: models.py  wagtail_hooks.py
custom/interest/: models.py  wagtail_hooks.py
custom/meetings/: models.py  wagtail_hooks.py
custom/permits/: models.py  wagtail_hooks.py
harmonycms/: context_processors.py  urls.py  wsgi.py
harmonycms/settings/: __init__.py  base.py  development.py  production.py
harmonycms/templates/: base.html  footer.html  header.html
hermonyadmin/: wagtail_hooks.py
hermonyadmin/static_src/: index.js
samplefiles/: .env  env.sample
(+91 files in other folders)
